# RESEARCH

./: .gitignore  CMakeLists.txt  README.md  asylmssp.cpp  base.cpp  base.h  main.cpp  mbahra.cpp  mbahra.h  msspoutput.cpp  msspstrips.cpp  mssptest.txt  packing.cpp  packing.h  test.txt
ARCHIVE/: base2.cpp  msspoutput.cpp  packing2.h
EA/: CMakeLists.txt  base.cpp  base.h  main.cpp  packing.cpp  packing.h  test15.txt
PAPER/: ALL.ods  ALL.xlsx  MFFD+.ods  MFFD.ods  PS.ods  draft.tex  main.tex  outputHeuristics.ods  outputHeuristicsExcel.xlsx  paper.tex
PAPER/SCSPP/: CMakeLists.txt  base.cpp  main.cpp  packing.cpp  packing.h
PAPER/figures/: boxesknife.tex  boxesknifeannotate.tex  exampleitems.tex  fullcycle.tex  items.tex  itemsaligned.tex  itemsgraph.tex  itemsknife.tex  matching.tex  mffd.tex  mffdplus.tex  mis2.tex  mispatch.tex  mps.tex  mpsconnect.tex  mpscycle.tex  mpspath.tex  partners.tex  ps.tex  singleboxannotate.tex  strips.tex  threshold.tex  vertexboxes1.tex
PAPER/includes/: bibliography.bib  preamble.tex
SCSPP/COMBINED/: CMakeLists.txt  base.cpp  base.h  main.cpp  packing.cpp  packing.h
SCSPP/EA/: CMakeLists.txt  base.cpp  base.h  main.cpp  packing.cpp  packing.h  test.txt
SCSPP/HEURISTICS/: CMakeLists.txt  base.cpp  base.h  main.cpp  packing.cpp  packing.h
archive/: base2.h  main2.cpp  mbahra.h  packing.h
docs/: boxes.tex  main.tex  matchgraph.tex  mis.tex  packsmallest.tex  patch.tex  path.tex  thresholdgraph.tex
paper/: main.tex  notespaper.tex  paper.tex
paper/SCSPP/: CMakeLists.txt  base.cpp  base.h  main.cpp  packing.cpp  packing.h
(+81 files in other folders)
